--- a/CreditCard/CreditCard.RestAPI/CreditCard.RestAPI.csproj
+++ b/CreditCard/CreditCard.RestAPI/CreditCard.RestAPI.csproj
@@ -203,7 +203,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ValidateResultViewModel.cs" />
+    <Compile Include="Models\Validator\CardValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\MathUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
