--- a/CreditCard/CreditCard.UnitTest/CreditCard.UnitTest.csproj
+++ b/CreditCard/CreditCard.UnitTest/CreditCard.UnitTest.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreditCardUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
